[Omnibox] Fix ellipses and remove description when it doesn't fit

This CL passes the correct available width to ComputeMatchMaxWidths so
that the text get an ellipsis if needed. Also, the description view will
not be shown if there is no space for it.

Bug: 836740, 838592
Change-Id: I096fddd1191dfb61f1cd008e4b81a79bd718d1f2
Reviewed-on: https://chromium-review.googlesource.com/1038618
Reviewed-by: Justin Donnelly <jdonnelly@chromium.org>
Commit-Queue: Dave Schuyler <dschuyler@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555482}